css/style.css
/*
Colors used

Text Color: #00b7c2;
Primary Color: #1b262c;
Secondary Color: #97D477;
 */

:root {
  --text-color: #495464;
  --primary-color: #f4f4f2;
  --footer-header: #e8e8e8;
  --butons-and-details: #bbbfca;
  --font-weight-h: 700;
  --font-weight-text: 400;
}

* {
  box-sizing: border-box;
}

html {
  height: 100%; /* tells the browser to cover at least 100% of the screen */
}

body {
  font-family: 'Lato', sans-serif;
  font-weight: var(--font-weight-text);
  font-size: 16px;
  line-height: 1.6;
  background: var(--primary-color);
  color: var(--text-color);
  margin: 0;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

h1 {
  font-size: 26px;
  font-weight: var(--font-weight-h);
  padding: 15px;
}

h2 {
  font-size: 22px;
  font-weight: var(--font-weight-h);
}

h3 {
  font-size: 18px;
  font-weight: var(--font-weight-h);
}

a {
  color: var(--butons-and-details);
}

a:visited {
  color: var(--butons-and-details);
}

a:hover,
a:focus {
  text-decoration: none;
}

a:active {
  color: #fff;
}

.quote {
  font-size: 15px;
  color: #000;
}

.quote a {
  text-decoration: none;
}

svg path {
  fill: var(--text-color);
}

.find-me-icon {
  display: inline-block;
}

.find-me-icon:hover {
  opacity: 0.8;
}

.index-main {
  display: flex;
  justify-content: center;
}

.profile__portrait {
  float: left;
  width: 300px;
  height: auto;
  margin: 25px 25px 25px 0;
  border-radius: 50%;
  box-shadow: 0 4px 6px 0 rgba(34, 60, 80, 0.16);
  transition: all ease-in-out 0.2s;
}

.profile__portrait:hover {
  box-shadow: 0 8px 12px 0 rgba(60, 60, 80, 0.4);
}

.profile-regards {
  padding-left: 20px;
}

/* ---------------------------------------------------------------------------------------- */
header {
  background-color: var(--footer-header);
  opacity: 0.5;
}

.page-header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between; /* this send the menu to the right */
  align-items: center;
  width: 90%;
  margin: auto;
  padding: 20px;
} /* . the flex of the page header change the distribution of the logo and the nav-section. if I want to change the direction of this two I have to do it from here */

.botton-line {
  width: 100%;
  height: 1.5px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

.page-header:last-child {
  flex: 1 1 auto;
}

.page-header__logo {
  font-size: 25px;
  font-weight: 400;
  font-family: 'Chakra Petch', sans-serif;
}

.logo-span {
  text-transform: uppercase;
  font-weight: 700;
}

nav {
  width: 50%;
}

.navigation-list__item {
  align-items: center;
  justify-content: center;
  border: none;
  font-family: inherit;
  background-color: #495464;
  text-decoration: none;
  padding: 0;
  border-radius: 3px;
  border-bottom: 2px solid #fff;
  transition: 0.4s opacity, 0.5s background-color;
}

.navigation-list__item--active {
  text-decoration: none;
  opacity: 0.8;
  background-color: #000;
}

.page-header__item li:hover {
  opacity: 0.8;
}

.navigation-list__item a {
  text-decoration: none;
  color: #fff;
  cursor: pointer;
  font-size: 20px;
  padding: 10px;
  display: block;
  }

.page-header__item {
  list-style-type: none;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0;
}

/* with page-header__item I changed the direction of the nav-list to row */

/* header media query */

@media all and (min-width: 500px) and (max-width: 830px) {
  nav {
    width: 60%;
  }

  .page-header__item li {
    font-size: 18px;
  }

  .page-header__logo {
    font-size: 25px;
  }
}

@media all and (max-width: 500px) {
  .page-header {
    flex-direction: column;
    align-items: center;
    width: 100%;
    padding: 10px 0 0;
  }

  .page-header__logo {
    font-size: 15px;
  }

  .page-header__item li {
    font-size: 20px;
    height: 60px;
    text-align: center;
  }

  .page-header__item {
    flex-direction: column;
    padding: 0;
    margin: 0;
  }

  nav {
    justify-content: center;
    width: 100%;
    padding: 0;
    margin: 0;
  }
}

/* header media query ends */

/* -------------------------------------------------------------------- */

.page-footer {
  background-image: url(../img/Hexagon-dotted-connect-line-background.1.jpg);
  background-size: cover;
  background-position: center;
  opacity: 0.5;
  padding: 0 5px 5px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  text-align: center;
  clear: both;
  width: 100%;
  height: 140px;
}

.social-media {
  padding: 0 0 20px;
}

.profile {
  display: flex;
  align-items: center;
  justify-content: center;
  max-width: 900px;
  margin: 0 auto;
  text-align: left;
  line-height: 25px;
  flex-wrap: wrap;
}

.profile h1 {
  font-size: 44px;
  font-weight: 700;
  background: linear-gradient(to left, #6f6f89, #000); /* creates a background gradient */
  -webkit-background-clip: text; /* "clips" the backgrouncolor with the text */
  -webkit-text-fill-color: transparent; /* make trasparent the text so you can see the cliped background color */
}

.contact-me-info {
  padding: 0 0 15px 20px;
}

.contact-me-info h1 {
  font-family: 'Chakra Petch', sans-serif;
  text-align: center;
  padding: 0;
  margin: 0;
}

.my-work h1 {
  font-family: 'Chakra Petch', sans-serif;
  text-align: center;
  padding: 30px 0 15px;
  margin: 0;
}

.form-seccition__div {
  display: flex;
  justify-content: center;
}

#contact-form {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

button,
.contact-form__submit,
.button {
  cursor: pointer;
  font-family: inherit;
  display: inline-block;
  border-radius: 3px;
  padding: 7px 12px;
  border: 1px solid #d5d5d5;
  color: #fff;
  background: #569e3d linear-gradient(#82e262, #529b39) repeat-x;
  border-color: #4a993e;
  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
  text-decoration: none;
  transition: 0.7s opacity;
}

button:hover,
button:focus,
.contact-form__submit:hover,
.contact-form__submit:focus,
.button:hover,
.button:focus {
  cursor: pointer;
  opacity: 0.8;
}

.button:visited {
  color: white;
}

/* aligning the about page start */
.about-me__flexbox {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: 100%;
}

.about-me__preview {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.activity-list {
  list-style-type: none;
  text-align: center;
  padding: 0;
}

/* aligning the about page end */

/* start grid fallback */

.grid__item {
  display: inline-block;
  width: 33%;
  background-color: #fff;
  border: 4px solid var(--butons-and-details);
  padding: 10px;
}

/* end grid fallback */

@supports (display: grid) {
  .grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    padding: 0 20px 30px;
    gap: 15px;
    justify-items: center;
  }

  .grid__item {
    width: auto;
    min-height: auto;
    margin: 0;
  }

  .grid__item:last-child {
    grid-row: 1 / 4;
  }

  .grid__item-5 {
    grid-column: 1 / 3;
    grid-row: 3 / 3;
  }
}

@media all and (min-width: 500px) and (max-width: 750px) {
  .grid {
    grid-template-columns: 1fr 1fr;
    grid-gap: 10px;
  }

  .grid__item:last-child {
    grid-column: auto / auto;
    grid-row: auto / auto;
  }
}

@media all and (max-width: 500px) {
  .grid {
    grid-template-columns: 1fr;
    grid-gap: 10px;
  }

  .grid__item:last-child {
    grid-column: auto / auto;
    grid-row: auto / auto;
  }

  .grid__item-5 {
    grid-column: auto / auto;
    grid-row: auto / auto;
  }

  h1 {
    font-size: 22px;
  }
}

/* animation SVG */

#svg1404 {
  max-width: 700px;
}

@keyframes sailboat-1-move {
  from {
    transform: translate(40px, 0);
  }

  to {
    transform: translate(-500px, -20px);
  }
}

@keyframes sailboat-2-move {
  from {
    transform: translate(-200px, 0);
  }

  to {
    transform: translate(500px, -10px);
  }
}

#sailboat-1 {
  animation-duration: 20s;
  animation-name: sailboat-1-move;
  animation-iteration-count: infinite;
  animation-direction: normal;
  animation-timing-function: linear;
}

#sailboat-2 {
  animation: 15s sailboat-2-move infinite normal linear;
}

@keyframes cloud-move-reverse {
  from {
    transform: translate(0, -80px);
  }

  to {
    transform: translate(446px, -80px);
  }
}

.cloud-front {
  animation: 34s cloud-move-reverse infinite alternate linear;
}

.cloud-back {
  animation: 20s cloud-move-reverse infinite alternate linear;
}

@keyframes sun-color-change {
  0% {
    fill: #edc655;
  }

  50% {
    fill: #fcffad;
  }

  100% {
    fill: #fd5d07;
  }
}

.sun {
  animation-duration: 3s;
  animation-name: sun-color-change;
  animation-iteration-count: infinite;
  animation-direction: reverse;
  animation-timing-function: linear;
}

@keyframes fernsehturm-color-change {
  0% {
    fill: #fdfdfd;
  }

  50% {
    fill: #fcffad;
  }

  100% {
    fill: #000;
  }
}

.fernsehturm {
  animation-duration: 20s;
  animation-name: fernsehturm-color-change;
  animation-iteration-count: infinite;
  animation-direction: reverse;
  animation-timing-function: linear;
}

@keyframes cargo-ship-movement {
  from {
    transform: translate(-2px, 0);
  }

  to {
    transform: translate(-2px, 20px);
  }
}

.cargo-ship {
  animation-duration: 10s;
  animation-name: cargo-ship-movement;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-timing-function: linear;
}

/* animation ends */

